# dockerized-satisfactory

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dockerfiles/: docker_ui.dockerfile  server.dockerfile
satisfactory_docker_ui/: app.py  auth.py  wsgi.py
satisfactory_docker_ui/classes/: alchemy.py  savegame.py
satisfactory_docker_ui/templates/: base.html  login.html  root.html
